"_configsvrSetClusterParameter" command with "previousTime" parameter set cannot be reissued whenever the previous invocation sets the parameter and then fails

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.5
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • QE 2024-09-16, QE 2024-09-30, QE 2024-10-14
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      "_configsvrSetClusterParameter" command with "previousTime" parameter set cannot be reissued whenever the previous invocation sets the parameter and then fails. The "_configsvrSetClusterParameter" command performs a cleanup of the invocation state, and if that cleanup fails the whole invocation fails. An example of such failure is the failing to delete the state document due to the primary node step-down.
      If the command attempts to set the parameter value to a value that is already set,
      regardless of "previousTime" it could just return successfully without performing any state changes.

            Assignee:
            Mindaugas Malinauskas (Inactive)
            Reporter:
            Mindaugas Malinauskas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: