SERVER-94691 Made "_configsvrSetClusterParameter" command to support retries when "previousTime" parameter is set (#27107)

GitOrigin-RevId: 342239ac3267a49fec10dc63408b99e92f97d458